--- a/Task1/utils/build.gradle
+++ b/Task1/utils/build.gradle
@@ -13,14 +13,11 @@ repositories {
 
 
 dependencies {
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
 }
 
 jar {
-    manifest {
-        attributes "Main-Class": "NONE"
-    }
     from {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
