--- a/Task1/utils/build.gradle
+++ b/Task1/utils/build.gradle
@@ -19,6 +19,6 @@ dependencies {
 
 jar {
     from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
