--- a/Task1/utils/build.gradle
+++ b/Task1/utils/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'java-library'
-    id 'maven'
+    id 'maven-publish'
 }
 
 project.group = "by.epam"
-version = "1.3.5"
+project.version = "1.3.5"
 
 repositories {
     mavenLocal()
@@ -13,12 +13,27 @@ repositories {
 
 
 dependencies {
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
 }
 
 jar {
+    manifest{
+        attributes("Implementation-Title": archiveBaseName,
+                "Implementation-Version": archiveVersion)
+    }
     from {
         configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
+
+
+publishing {
+    publications {
+        utilsLibrary(MavenPublication) {
+            from components.java
+        }
+    }
+}
+
+
