--- a/Task2/gift_certificates_system/data_access/build.gradle
+++ b/Task2/gift_certificates_system/data_access/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
     implementation group: 'org.springframework', name: 'spring-jdbc', version: project.properties['version.spring']
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
 }
