--- a/Task2/gift_certificates_system/build.gradle
+++ b/Task2/gift_certificates_system/build.gradle
@@ -32,4 +32,8 @@ subprojects {
             configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
         }
     }
+
+    test {
+        useJUnitPlatform()
+    }
 }
