--- a/Task2/gift_certificates_system/data_access/build.gradle
+++ b/Task2/gift_certificates_system/data_access/build.gradle
@@ -1,4 +1,13 @@
 dependencies {
-    implementation group: 'org.springframework', name: 'spring-jdbc', version: project.properties['version.spring']
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
+    implementation group: 'org.springframework', name: 'spring-jdbc', version: project.properties['version.spring']
+
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.1'
+    testImplementation group: 'org.springframework', name: 'spring-test', version: '5.3.4'
+    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.1'
+    testRuntimeOnly group: 'org.springframework', name: 'spring-test', version: '5.3.4'
+
 }
