--- a/Task2/gift_certificates_system/core/build.gradle
+++ b/Task2/gift_certificates_system/core/build.gradle
@@ -1,4 +1,11 @@
 dependencies {
     implementation group: 'org.springframework', name: 'spring-web', version: project.properties['version.spring']
     implementation project(":data_access")
+
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.1'
+    testImplementation group: 'org.springframework', name: 'spring-test', version: '5.3.4'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.8.0'
+
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.1'
+    testRuntimeOnly group: 'org.springframework', name: 'spring-test', version: '5.3.4'
 }
