--- a/Task2/gift_certificates_system/data_access/build.gradle
+++ b/Task2/gift_certificates_system/data_access/build.gradle
@@ -5,11 +5,11 @@ dependencies {
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.2'
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.1'
-    testImplementation group: 'org.springframework', name: 'spring-test', version: '5.3.4'
+    testImplementation group: 'org.springframework', name: 'spring-test', version: project.properties['version.spring']
     testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
     testImplementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.2'
 
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.1'
-    testRuntimeOnly group: 'org.springframework', name: 'spring-test', version: '5.3.4'
+    testRuntimeOnly group: 'org.springframework', name: 'spring-test', version: project.properties['version.spring']
 
 }
