--- a/Task2/gift_certificates_system/build.gradle
+++ b/Task2/gift_certificates_system/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    id 'java'
+    id 'war'
 }
 
 subprojects {
-    apply plugin: "java"
+    apply plugin: "war"
 
     tasks.withType(JavaCompile) {
         group = 'com.epam.esm'
@@ -13,9 +13,21 @@ subprojects {
         targetCompatibility = JavaVersion.VERSION_1_8
     }
 
+    buildscript {
+
+        repositories {
+            jcenter()
+        }
+
+        dependencies {
+            classpath 'com.bmuschko:gradle-tomcat-plugin:2.2.2'
+        }
+    }
+
     repositories {
         mavenCentral()
         mavenLocal()
+        jcenter()
     }
 
     dependencies {
@@ -27,10 +39,11 @@ subprojects {
                 version: project.properties['version.spring']
     }
 
-    jar {
+    war {
         from {
             configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
         }
+        webXml = null
     }
 
     test {
