--- a/Task2/gift_certificates_system/core/build.gradle
+++ b/Task2/gift_certificates_system/core/build.gradle
@@ -1,5 +1,11 @@
+apply plugin: 'war'
+apply plugin: 'com.bmuschko.tomcat'
+
 dependencies {
     implementation group: 'org.springframework', name: 'spring-web', version: project.properties['version.spring']
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: project.properties['version.spring']
+    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+
     implementation project(":data_access")
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.1'
@@ -8,4 +14,10 @@ dependencies {
 
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.1'
     testRuntimeOnly group: 'org.springframework', name: 'spring-test', version: project.properties['version.spring']
+
+    def tomcatVersion = '7.0.59'
+
+    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
+            "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}",
+            "org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}"
 }
