--- a/Task2/gift_certificates_system/data_access/build.gradle
+++ b/Task2/gift_certificates_system/data_access/build.gradle
@@ -2,6 +2,7 @@ dependencies {
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
     implementation group: 'org.springframework', name: 'spring-jdbc', version: project.properties['version.spring']
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.2'
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.1'
