Resolve issues with properties file

--- a/Task2/gift_certificates_system/data_access/src/main/resources/db.properties
+++ b/Task2/gift_certificates_system/data_access/src/main/resources/db.properties
@@ -1,5 +1,6 @@
 jdbcUrl=jdbc:postgresql://localhost:5432/gift_certificates
 dataSource.user=postgres
+driverClassName=org.postgresql.Driver
 dataSource.password=postgres
 dataSource.cachePrepStmts=true
 dataSource.prepStmtCacheSize=250
