--- a/Task2/gift_certificates_system/core/build.gradle
+++ b/Task2/gift_certificates_system/core/build.gradle
@@ -4,6 +4,14 @@ apply plugin: 'com.bmuschko.tomcat'
 dependencies {
     implementation group: 'org.springframework', name: 'spring-web', version: project.properties['version.spring']
     implementation group: 'org.springframework', name: 'spring-webmvc', version: project.properties['version.spring']
+    implementation group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '1.1.4.RELEASE'
+
+//    implementation group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'
+//    implementation group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.2'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.2'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.2'
+
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
 
     implementation project(":data_access")
