--- a/Task3/gift_certificates_system/build.gradle
+++ b/Task3/gift_certificates_system/build.gradle
@@ -1,10 +1,7 @@
-plugins {
-    id 'war'
-}
+apply plugin: 'java'
 
 subprojects {
-    apply plugin: "war"
-
+    apply plugin: 'java'
     tasks.withType(JavaCompile) {
         group = 'com.epam.esm'
         version = '0.0.1'
@@ -12,40 +9,16 @@ subprojects {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
     }
-
-    buildscript {
-
-        repositories {
-            jcenter()
-        }
-
-        dependencies {
-            classpath 'com.bmuschko:gradle-tomcat-plugin:2.2.2'
-        }
-    }
-
     repositories {
         mavenCentral()
         mavenLocal()
         jcenter()
     }
-
-    dependencies {
-        implementation group: 'org.springframework',
-                name: 'spring-core',
-                version: project.properties['version.spring']
-        implementation group: 'org.springframework',
-                name: 'spring-context',
-                version: project.properties['version.spring']
-    }
-
-    war {
+    jar {
         from {
             configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
         }
-        webXml = null
     }
-
     test {
         useJUnitPlatform()
     }
