--- a/Task3/gift_certificates_system/core/build.gradle
+++ b/Task3/gift_certificates_system/core/build.gradle
@@ -1,31 +1,18 @@
-apply plugin: 'war'
-apply plugin: 'com.bmuschko.tomcat'
+plugins {
+    id 'org.springframework.boot' version '2.4.2'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+}
 
 dependencies {
-    implementation group: 'org.springframework', name: 'spring-web', version: project.properties['version.spring']
-    implementation group: 'org.springframework', name: 'spring-webmvc', version: project.properties['version.spring']
-    implementation group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '1.1.4.RELEASE'
-
-//    implementation group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'
-//    implementation group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.2'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.2'
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.2'
-
-    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-
     implementation project(":data_access")
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.1'
-    testImplementation group: 'org.springframework', name: 'spring-test', version: project.properties['version.spring']
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'junit', module: 'junit'
+    }
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.8.0'
-
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.1'
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.1'
-    testRuntimeOnly group: 'org.springframework', name: 'spring-test', version: project.properties['version.spring']
-
-    def tomcatVersion = '7.0.59'
-
-    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
-            "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}",
-            "org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}"
 }
+
