--- a/Task3/gift_certificates_system/data_access/build.gradle
+++ b/Task3/gift_certificates_system/data_access/build.gradle
@@ -1,16 +1,23 @@
+plugins {
+    id 'org.springframework.boot' version '2.4.2'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+}
+
 dependencies {
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
-    implementation group: 'org.springframework', name: 'spring-jdbc', version: project.properties['version.spring']
+
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.2'
 
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'junit', module: 'junit'
+    }
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.1'
-    testImplementation group: 'org.springframework', name: 'spring-test', version: project.properties['version.spring']
     testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
     testImplementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.2'
 
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.1'
-    testRuntimeOnly group: 'org.springframework', name: 'spring-test', version: project.properties['version.spring']
-
 }
